--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 on:
   push:
-  branches: -main
+  watch: -main
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -14,6 +14,6 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           server: ftp.khairulislam.xyz
-          username: math@khairulislam.xyz
+          username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           server-dir: /public_html/khairulislam.xyz/math
