--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           server-dir: /public_html/math/
-          dry-run: true
-          #ARGS: --verbose
+          #dry-run: true
+          ARGS: --verbose
