--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           server-dir: /public_html/
-          protocol: ftps
+          protocol: ftp
           port: 21
           dry-run: true
           #ARGS: --verbose
